@@ -50,6 +50,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Page moves should not be minor edits
 * (bug 17035) Special:Upload now fails gracefully if PHP's file_uploads has been
   disabled
+* Fixing the caching issue by using -{T|xxx}- syntax (only applies on wiki with LanguageConverter class)
+* Improving the efficiency by using -{A|xxx}- syntax (only applies on wiki with LanguageConverter class)
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
